--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.1",
+    "dayjs": "^1.11.19",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0",
